# FSharp_MLIR

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  antlr4.cmake  boost.cmake  cpptrace.cmake  fmt.cmake  llvm.cmake  magic_enum.cmake  utils.cmake
compiler/: CMakeLists.txt
compiler/Dialect/: CMakeLists.txt  dialect_test.cpp
compiler/Dialect/include/: CMakeLists.txt  FooDialect.h  FooDialect.td
compiler/Dialect/src/: FooDialect.cpp
compiler/app/: CMakeLists.txt  FSharpCompilerApp.cpp
compiler/generator/: ASTToMLIR.cpp  ASTToMLIR.h  CMakeLists.txt  SetupDependencies.cpp  SetupDependencies.h
compiler/generator/test/: ASTToMLIRTest.cpp  CMakeLists.txt
compiler/include/: CMakeLists.txt
compiler/include/Foo/: CMakeLists.txt  Foo.td  FooDialect.h  FooOps.h  FooTypes.h
compiler/include/compiler/: ASTToMLIR.h  CMakeLists.txt  Compiler.h  CompilerUtils.h  Dialect.h  FSharp.td  FSharpDialect.h  FSharpOp.h  FSharpPasses.h  PrecompileHeaders.h
compiler/lib/: CMakeLists.txt  FSharpDialect.cpp
compiler/lib/Dialect/: CMakeLists.txt  FooDialect.cpp  dialect_test.cpp
compiler/lib/Dialect/include/: CMakeLists.txt  FooOps.td
compiler/lib/Foo/: CMakeLists.txt  FooDialect.cpp  FooOps.cpp  FooTypes.cpp
compiler/mlir/: ASTToMLIR.cpp  Bufferize.cpp  CMakeLists.txt  Compiler.cpp  CompilerUtils.cpp  LowerToArith.cpp  LowerToFunc.cpp  LowerToLLVM.cpp  SetupDependencies.cpp  TypeInference.cpp
compiler/mlir/test/: CMakeLists.txt
compiler/src/standalone-translate/: standalone-translate.cpp
compiler/src/test/CAPI/: standalone-capi-test.c
compiler/test/: ASTToMLIRTest.cpp  CMakeLists.txt
compiler/test/Foo/: CMakeLists.txt  dialect_test.cpp
compiler/test/TestFiles/: Assert.fs  FunctionDefinition.fs  HelloWorld.fs  HelloWorldBranchConstant.fs  HelloWorldBranchNestedConstant.fs  HelloWorldVariable.fs  HellowWorldBranchRelation.fs  Logical.fs  LogicalNoDynamicReturn.fs  NestedFunctionDefinitions.fs  Recursion.fs  Relation.fs  SimpleAdd.fs
grammar/: CMakeLists.txt  FSharpLexer.g4  FSharpParser.g4  Grammar.cpp  Grammar.h
grammar/antlr/: CMakeLists.txt  FSharpLexer.g4  FSharpParser.g4  FSharpParserBase.cpp
grammar/antlr_src/: CMakeLists.txt  FSharpLexerBase.h
grammar/ast/: ASTHelper.cpp  ASTHelper.h  ASTNode.cpp  ASTNode.h  AstBuilder.cpp  AstBuilder.h  CMakeLists.txt  Range.cpp  Range.h  range.cpp  range.h
grammar/cpp/: CMakeLists.txt  FSharpLexerBase.cpp  FSharpParserBase.h
grammar/demo/: CMakeLists.txt
grammar/test/: CMakeLists.txt  SimpleExpression.fs  main.cpp
grammar/test/FSharpReferenceProject/: FSharpCompilerInspector.fsproj  FSharpCompilerInspector.sln  Program.fs
grammar/test/GTEST/: CMakeLists.txt  tests.cpp
grammar/transformations/: ASTCanonicalizer.cpp  ASTCanonicalizer.h  CMakeLists.txt
test/: CMakeLists.txt
utils/: CMakeLists.txt
utils/include/utils/: FunctionTimer.h
utils/utils/: FunctionTimer.cpp  FunctionTimer.h  Utils.cpp  Utils.h
